sales card updated

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,9 @@ body{
   font-weight: bold;
   font-size: x-large;
 }
+.dark{
+  background-color: black;
+}
 @layer base {
   :root {
         --background: 0 0% 100%;
