fixed payment methods info card

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,6 +10,9 @@ body{
   font-weight: bold;
   font-size: x-large;
 }
+.customScroll{
+      scrollbar-color: transparent transparent;
+}
 .dark{
   background-color: black;
 }
